PyMaker/datas/object2/RawHTML/Python_DOC_referPages.the-discord-module-is-failing-in-python-how-can-i-fix-this.txt
<div class="post-text" itemprop="text">
<p>I'm creating a bot for Discord, and I just wrote this simple code:</p>
<pre><code>import discord

TOKEN = "token"

client = discord.Client()


@client.event
async def on_ready():
    print('Bot is ready.')


client.run(TOKEN)
</code></pre>
<p>and it produces the following error:</p>
<pre><code>Traceback (most recent call last):
  File "/Users/pcaires/Desktop/Programação/Python/Discord Bots/Main.py", line 1, in &lt;module&gt;
    import discord
  File "/Users/pcaires/Desktop/Programação/Python/Discord Bots/venv/lib/python3.7/site-packages/discord/__init__.py", line 20, in &lt;module&gt;
    from .client import Client, AppInfo, ChannelPermissions
  File "/Users/pcaires/Desktop/Programação/Python/Discord Bots/venv/lib/python3.7/site-packages/discord/client.py", line 38, in &lt;module&gt;
    from .state import ConnectionState
  File "/Users/pcaires/Desktop/Programação/Python/Discord Bots/venv/lib/python3.7/site-packages/discord/state.py", line 36, in &lt;module&gt;
    from . import utils, compat
  File "/Users/pcaires/Desktop/Programação/Python/Discord Bots/venv/lib/python3.7/site-packages/discord/compat.py", line 32
    create_task = asyncio.async
                              ^
SyntaxError: invalid syntax
</code></pre>
<p>I searched and searched in the internet, and most of the people say to use Python 3.7, and that's what I've been using. Also, I've been using PyCharm as my IDE for Python.</p>
</div>
<div class="post-text" itemprop="text">
<h1>Where does the error come from?</h1>
<p>The version of discord.py you are using does not support Python <strong>3.7</strong> (in which <code>async</code> becomes a reserved keyword), as explained in <a href="https://github.com/Rapptz/discord.py/issues/1249" rel="noreferrer">this issue</a>.
This version of discord.py, which is the default branch on the <a href="https://github.com/Rapptz/discord.py" rel="noreferrer">GitHub repo</a>, is sadly the one installed by Pip.</p>
<h1>How to fix it</h1>
<p>You can either:</p>
<ul>
<li>downgrade your version of Python to 3.6. </li>
<li>install another version of discord.py, based on the <a href="https://github.com/Rapptz/discord.py/tree/rewrite" rel="noreferrer">rewrite branch</a> <em>which is under active development</em>, for example with the command : <code>python3 -m pip install --user -U https://github.com/Rapptz/discord.py/archive/rewrite.zip</code></li>
</ul>
</div>
<div class="post-text" itemprop="text">
<p>You can manually edit the file and change that line from <code>create_task = asyncio.async</code> to <code>create_task = getattr(asyncio, 'async')</code></p>
<p>See more info here: <a href="https://github.com/Rapptz/discord.py/issues/1249" rel="nofollow noreferrer">https://github.com/Rapptz/discord.py/issues/1249</a></p>
</div>
<span class="comment-copy">I suggest removing your token from the script as it means anyone can take control of your bot. I would also generate a new token or even create a new bot.</span>
<span class="comment-copy">I think the more relevant advice from that link is to update to a more recent version of <code>discord.py</code> that is compatible with python 3.7</span>
<span class="comment-copy">This isn't a good (actually it's a terrible) recommendation. First, you shouldn't manually change site-package source files, it makes your code dependent on an altered requirement package. Second, <code>asyncio.async</code> was deprecated versions ago, so if you're going to recommend a fix, change it to something that's not deprecated. Third, there's clearly a better choice of solutions, see Patrick’s comment (there was an semi-official patch for this very issue — though the patch is like your comment, I don't believe that will get passed to the official build, see the previous two points).</span>
<span class="comment-copy">I tried doing as your answer stated and I received further similar errors from elsewhere.  In the end I used the answer above.  It works fine now</span>
